# edca

./: .gitignore  LICENSE  README.md  generate_warneford_visuals.py  pyproject.toml  setup.cfg  update_warneford_excel.py
code/earlystruct/: cli.py
code/notebooks/: DesignExplorer.ipynb  DesignExplorer2.ipynb  DesignExplorerCopy.ipynb
control_file/: control_file.txt  control_file_template.txt
csvs/: bar_spacing.csv  grid_options.csv  materials.csv  occupancies.csv  program.csv  project.csv  system_curves.csv  systems_catalog.csv
csvs/Code Checks/: ContinuousSlab.xlsx
docs/: project_overview
early_design_tool/control_file/: control_file.txt  control_file_template.txt
early_design_tool/csvs/: system_curves.csv
edca_code/: more_code.ipynb
edca_code.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
edca_code/constants/: rebar_properties.py  units.py
edca_code/scripts/: run_edca.py  run_edca_backup.py  run_edca_older.py  working_code.ipynb
enriched_outputs/: beam_systems_enriched_reference_capacities.csv  column_systems_enriched_reference_capacities.csv
inputs/canonical/: beam_families.parquet  beam_families_schema.yaml  beam_systems.parquet  beam_systems_schema.yaml  beam_variants.parquet  beam_variants_schema.yaml  column_families.csv  column_families.parquet  column_families_schema.yaml  column_systems.csv  column_systems.parquet  column_systems_schema.yaml  column_variants.csv  column_variants.parquet  column_variants_schema.yaml  floor_families.csv  floor_families.parquet  (+27 more)
setup/: flowchart.md  manifest.in
(+147 files in other folders)
