[metadata]
name = edca
version = 0.2.0
description = Early Design Carbon Assessment Tool
long_description = file: README.md
long_description_content_type = text/markdown
author = Benjamin Salop
license = MIT
license_files = LICENSE
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.12
    License :: OSI Approved :: MIT License

[options]
packages = find:
package_dir =
    = .
python_requires = >=3.12
install_requires =
    numpy
    pandas
    pyyaml
    pydantic
    pyarrow

include_package_data = True

[options.packages.find]
where = .

[options.entry_points]
console_scripts =
    edca = edca_code.scripts.run_edca:main